Removing block style from all elements to avoid some elements from being hidden under elements added later in the page loads.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -76,15 +76,6 @@ body {
   }
 }
 *[id]:before {
-  display: block;
-  content: " ";
-  margin-top: -75px;
-  height: 75px;
-  visibility: hidden;
-}
-//use this when dynamically updating an element but want to fix the location of the top of the element
-*[id].remove-block:before {
-  display: none;
   content: " ";
   margin-top: -75px;
   height: 75px;
